<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="60"
        android:title="@string/action_settings_text"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_settings"
        />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="90"
        android:title="@string/action_exit_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="80"
        android:title="@string/action_logout_text"
        app:showAsAction="never"


        />
    <item
        android:id="@+id/action_reload"
        android:orderInCategory="50"
        android:title="@string/action_reload_text"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_reload"

        />
    <item
        android:id="@+id/action_news_update"
        android:orderInCategory="70"
        android:title="@string/action_news_update_text"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_reload"

        />
</menu>