<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tips0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    tools:context=".ui.tips0.Tips0Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/tip0Image"
                android:layout_width="wrap_content"
                android:layout_height="317dp"
                android:layout_margin="10dp"
                android:contentDescription="Tip1_logo"
                android:src="@drawable/tiplogo0" />

            <TextView
                android:id="@+id/tip1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:text="@string/tip0text"
                android:textAlignment="center"
                android:textColor="#0E0E0E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/tip0CancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tips_cancel_btn_text"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                     />

                <Button
                    android:id="@+id/tip0NextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/tips_next_btn_text"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                     />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>