<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/send_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.sendcode.SendCodeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#F8FBFB"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <!-- Header & Edit option -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">


                <TextView
                    android:id="@+id/nav_transport_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="সাইন ইন করুন"
                    android:textColor="#0C0C0C"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- signin header -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_action_signin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_message_text"
                    android:textColor="#0c0c0c"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- email & password -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:text="ফোন নম্বর"
                    android:textColor="#0c0c0c"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    >
                    <EditText
                        android:id="@+id/sendCodePhoneNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:hint="শূন্য সহ আপনার ফোন নম্বর দিন"
                        android:inputType="phone"
                        android:textColor="#0c0c0c"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>



                <Button
                    android:id="@+id/send_code_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="15dp"
                    android:text="পরবর্তী"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />



                <TextView
                    android:id="@+id/helpRequestTextView"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="সাহায্য"
                    android:padding="5dp"
                    android:textColor="#1E88E5"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />



            </LinearLayout>

            <!-- bottom nav app name-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingTop="10dp"
                android:text="@string/app_name"
                android:textColor="#0c0c0c"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/app_main_name"
                android:textColor="#0c0c0c"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>



</RelativeLayout>